# Sentinel

./: .gitignore  CNAME  MergeRules.md  README.md  architecture_changes.md  logout_frontend_fix.md  pyproject.toml  schemaupdate.md
.github/workflows/: nextjs.yml
backend/: test_3step_scanner.py  test_scanner.py
backend/api/: main.py
backend/api/routes/: moderation.py
backend/contracts/: SentinelDAO.sol
backend/core/: config.py  database.py
backend/services/: ai_scanner.py  blockchain.py  dao_moderation.py  moderation.py  web3_client.py
backend/services/scanner/: __init__.py  agent.py  classifier.py  context_manager.py
backend/services/scanner/tools/: history_tool.py
backend/worker/: realtime_scanner.py
frontend/: build_output.txt  lint_final.txt  lint_output.txt  lint_output_v2.txt  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test_tables.mjs  tsconfig.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/actions/: auth.ts
frontend/src/app/activity/: page.tsx
frontend/src/app/cases/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/activity/: ActivityDetailPanel.tsx  (+3 more)
frontend/src/hooks/: use-auth.ts  use-navigation-transition.ts  useMetaMaskVote.ts
frontend/src/mockdata/: cases.ts  chat.ts  profileLogos.ts  room.ts  user.ts
frontend/src/types/: activity.ts
frontend/src/utils/: account.ts  punishment.ts
(+36 files in other folders)
